*Empty MediaWiki Message*

--- a/Pohjoižen_saldat_(fil'm).mw
+++ b/Pohjoižen_saldat_(fil'm).mw
@@ -1,6 +1,6 @@
 '''«Pohjoižen saldat»''' ([[Suomen kel'|suom.]]: ''Jadesoturi'', [[Kitajan kel'|kit.]]: ''玉战士'' ([[pinju]] ''Yù zhànshì''), [[Estin kel'|est.]]: ''Igavese armastuse sõdalane'', [[Anglijan kel'|angl.]]: ''Jade Warrior'', [[Venäkel'|ven.]]: ''Воин севера'', sana sanaha kändase kuti ''Nefritsaldat'') om voden 2006 [[Suomenma|suomalaiž]]-[[Kitai|kitajalaine]] sätud ühthe fil'm. Se ühtenzoitab [[vuksii]]-žanran kohtad suomalaiž-karjalaižen [[Kalevala]]-eposan mifologijanke. Režissör — [[Annila Antti-Jussi|Antti-Jussi Annila]].
 
-Fil'man ezmäine ozutez Suomenmas oli vl. 2006 redukun 13 päivän 40 kopijas. Film om ozutadud #2 debütantaks [[Mecamez' pidab «Prada»]]-fil'man jäl'ghe. Kitajas necen fil'man ezmäine ozutez oli vl. 2006 redukun 24 päivän 150 kopijas 70 lidnas. "Pohjoižen saldat" om ezmäine ozutadud Kitajas kinoteatroiš suomalaine fil'm. Kitajan ližaks, rahvazkeskeižid oiktuzid ozutamha fil'mad ostiba enamba 30 valdkundad.<ref>Aamulehti 10.10.2006, sivu B20</ref> Suomenmas nece fil'm kerazi €607,038, mödud 79,050 biletad.<ref>http://www.imdb.com/title/tt0416871/business</ref>
+Fil'man ezmäine ozutez Suomenmas oli vl. 2006 redukun 13 päivän 40 kopijas. Film om ozutadud #2 debütantaks [[Mecamez' pidab «Prada»]]-fil'man jäl'ghe. Kitajas necen fil'man ezmäine ozutez oli vl. 2006 redukun 24 päivän 150 kopijas 70 lidnas. «Pohjoižen saldat» om ezmäine ozutadud Kitajas kinoteatroiš suomalaine fil'm. Kitajan ližaks, rahvazkeskeižid oiktuzid ozutamha fil'mad ostiba enamba 30 valdkundad.<ref>Aamulehti 10.10.2006, sivu B20</ref> Suomenmas nece fil'm kerazi €607,038, mödud 79,050 biletad.<ref>http://www.imdb.com/title/tt0416871/business</ref>
 
 == Kinostarin ==
 Mugavudes suomalaiž-karjalaižed [[Kalevala]]-eposad, starinoičend avaidase kadonudel ičeze ozad, mahtmatomal sepäl, kenen nimi om Kai, kudambad Ronja-neižne jäti, voib olda, igäks.
