Я верно поняла, это два разных издания?

--- a/Det_gamle_riket.mw
+++ b/Det_gamle_riket.mw
@@ -1,2 +1,5 @@
-#suuna [[Det gamle riket (demoal'bom, 1995)]]
+'''Det gamle riket''':
+* [[Det gamle riket (demoal'bom, 1995)]]
+* [[Det gamle riket (demoal'bom, 1996)]]
 
+[[Kategorii:Tärtused]]
