*Empty MediaWiki Message*

--- a/Vepsän_Vikipedii.mw
+++ b/Vepsän_Vikipedii.mw
@@ -12,7 +12,7 @@ Kirjutusiden lugu om {{NUMBEROFARTICLES}} ({{CURRENTDAY}}. {{CURRENTMONTHNAMEGEN
 {{stub}}
 
 [[Kategorii:Vikipedijad]]
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän kel']]
 
 [[cv:Вепс Википедийĕ]]
 [[ru:Вепсская Википедия]]
