*Empty MediaWiki Message*

--- a/Olejnikov_Il'ja.mw
+++ b/Olejnikov_Il'ja.mw
@@ -1,4 +1,4 @@
-'''Il'ja L'vovič Olejnikov''' ([[Venäkel'|ven.]] ''Илья Львович Олейников''; todesine nimi — '''Il'ja L'vovič Kläver''' ([[Venäkel'|ven.]] ''Илья Львович Клявер'');  sünd. [[10. heinku]] [[1947]], [[Kišinöv]], [[Moldavii]] - 10. noyabr [[2012]]) om [[NSTÜ|nevondkundlaine]] i [[Venäma|venälaine]] aktör i TV-vedai, "[[Gorodok]]"-jumorprogramman vedai (ühtmudel [[Stojanov Jurii|Jurijan Stojanovanke]]).
+'''Il'ja L'vovič Olejnikov''' ([[Venäkel'|ven.]] ''Илья Львович Олейников''; todesine nimi — '''Il'ja L'vovič Kläver''' ([[Venäkel'|ven.]] ''Илья Львович Клявер'');  sünd. [[10. heinku]] [[1947]], [[Kišinöv]], [[Moldavii]] — kol. [[10. kül'mku]] [[2012]]) om [[NSTÜ|nevondkundlaine]] i [[Venäma|venälaine]] aktör i TV-vedai, "[[Gorodok]]"-jumorprogramman vedai (ühtmudel [[Stojanov Jurii|Jurijan Stojanovanke]]).
 
 == Irdkosketused ==
 * [http://gorodok.tv/cast_ilya Il'jan Olejnikovan polhe "Gorodok":an saital]
