*Empty MediaWiki Message*

--- a/Abramova_Marja.mw
+++ b/Abramova_Marja.mw
@@ -1,7 +1,5 @@
 '''Marja Abramova''' om [[vepsläižed|vepsläine]] runokirjutai. Hän om sündnu [[Ladv]]ha. Runod [[vepsän kel'|vepsän kelel]] erazvuiččiš keradusiš da periodikas. Runokirjutajan runod oma täuttud fol'klorižil motivoil, ned oma lujas pajonvuiččed.
-
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän runokirjutajad]]
 [[Kategorii:Vepsän lehtezmehed]]
-[[Kategorii:Vepsän kirjutajad]]
