*Empty MediaWiki Message*

--- a/Süvären_Aleksandr.mw
+++ b/Süvären_Aleksandr.mw
@@ -3,7 +3,7 @@
 {{stub}}
 
 [[Kategorii:Ortodoksine hristanuskond‎]]
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepslän pühämehed]]
 
 [[en:Alexander Svirsky]]
 [[fi:Aleksanteri Syväriläinen]]
