*Empty MediaWiki Message*

--- a/Jašdären_Iona.mw
+++ b/Jašdären_Iona.mw
@@ -1,7 +1,6 @@
 '''Iona Jašdären (Jašozeran)''' ([[venäkel'|ven.]]: ''Иона Яшезерский''; sünd. [[1592]], [[Šokš]]) oli venäläine [[Ortodoksine hristanuskond‎|ortodoksine]] pühämez', [[Aleksandr Süvären|Aleksandran Süvärenan]] openik. [[Vepsläižed|Vepsläine]].
 {{stub}}
 
-[[Kategorii:Ortodoksine hristanuskond‎]]
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän pühämehed]]
 
 [[ru:Иона Яшезерский]]
