*Empty MediaWiki Message*

--- a/Elonpu.mw
+++ b/Elonpu.mw
@@ -1,7 +1,7 @@
 '''Elonpu''' vai '''Elo-pu''' ([[venäkel'|ven.]]: ''Древо жизни'') om [[Vepsläižed|vepsän rahvahaline]] praznik.
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän praznikad]]
 [[Kategorii:Rahvahankul'tur]]
 [[Kategorii:Praznikad]]
 
