--- a/Lonin_Rürik.mw
+++ b/Lonin_Rürik.mw
@@ -4,7 +4,8 @@
 * [http://www.vepsia.ru/ludi/lonin.php Rürikan Petrovičan boigrafii Vepsän kul'turan Sebran saital]
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän kirjutajad]]
+[[Kategorii:Vepsän runokirjutajad]]
 [[Kategorii:Vepsän lehtezmehed]]
 
 [[en:Rjurik Lonin]]
