*Empty MediaWiki Message*

--- a/Piterin_Vepsän_Sebr.mw
+++ b/Piterin_Vepsän_Sebr.mw
@@ -3,5 +3,5 @@
 Kontaktpočtadres: ''kodima@mail.ru''
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän organizacijad]]
 [[Kategorii:Organizacijad]]
