*Empty MediaWiki Message*

--- a/Jousne.mw
+++ b/Jousne.mw
@@ -6,4 +6,4 @@
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Venäman pajatajad‎]]
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Vepsän pajatajad]]
