*Empty MediaWiki Message*

--- a/Däižed_lindud_lanktoba_oksilpei.mw
+++ b/Däižed_lindud_lanktoba_oksilpei.mw
@@ -1,4 +1,4 @@
-'''«Däižed lindud lanktoba oksilpei»''' ([[suomen kel'|suom.]]: ''Jäätyneet linnut putoavat oksiltaan'', [[venäkel'|ven.]]: ''Замёрзшие птицы падают с веток'') om [[2001]]-žen voden [[Raisa Lordot|Raisan Lardotan]] runokogoduz [[vepsän kel'|vepsän kelel]].
+'''«Däižed lindud lanktoba oksilpei»''' (kirjkel: ''Jäižed lindud lankteba oksilpäi'', [[suomen kel'|suom.]]: ''Jäätyneet linnut putoavat oksiltaan'', [[venäkel'|ven.]]: ''Замёрзшие птицы падают с веток'') om [[2001]]-žen voden [[Raisa Lordot|Raisan Lardotan]] runokogoduz [[vepsän kel'|vepsän kelel]].
 {{stub}}
 
 [[Kategorii:Kirjad vepsän kelel]]
