*Empty MediaWiki Message*

--- a/Kitai.mw
+++ b/Kitai.mw
@@ -22,7 +22,7 @@
 
 Eläjiden lugu om 1,347,374,752 ristitud (2010). Pind om 9,596,960 km².
 
-Indonezijan prezident om [[Hu Czin'tao]], päministr — [[Ven' Czäbao]].
+Kitajan prezident om [[Hu Czin'tao]], päministr — [[Ven' Czäbao]].
 {{stub}}
 
 [[Kategorii:Kitai]]
