*Empty MediaWiki Message*

--- a/Det_gamle_riket.mw
+++ b/Det_gamle_riket.mw
@@ -1,5 +1,17 @@
-'''Det gamle riket''':
-* [[Det gamle riket (demoal'bom, 1995)]]
-* [[Det gamle riket (demoal'bom, 1996)]]
+'''«Det gamle riket»''' (''Vanh kunigahuz'') om norvegijalaižen [[Windir]]-gruppan toine [[Demo (muzik)|demoal'bom]], pästtud vl [[1995]].
 
-[[Kategorii:Tärtused]]
+== Pajoiden kirjutez ==
+# «Mørkrets fyrste» (7:27)
+# «Sognarikets herskarinne» (3:59)
+# «Røvhaugane» (5:02)
+# «Krigaren si gravferd» (5:48)
+# «Krystallnatt»
+{{Windir}}
+{{stub}}
+
+[[Kategorii:Windir]]
+[[Kategorii:Al'bomad kirjamišton mödhe]]
+
+[[it:Det Gamle Riket]]
+[[no:Det gamle riket (album)]]
+[[pt:Det Gamle Riket]]
