--- a/Kalarand.mw
+++ b/Kalarand.mw
@@ -1,12 +1,12 @@
 [[Image:Vepsakalarand.jpg|right|thumb|Pästandan kirjankor']]
-'''Kalarand''' om ezmäine [[Vepsän kel'|vepsänkeline]] roman. Sen tegii om Igor' Brodskii.
+'''Kalarand''' om ezmäine [[Vepsän kel'|vepsänkeline]] roman. Sen tegii om [[Brodskii Igor'|Igor' Brodskii]].
 
-Kirj om lähttud [[2002]]-del vodel [[Petroskoi]]š
+Kirj om lähttud [[2002]]-del vodel [[Petroskoi]]š.
 
+<small>
 == Kirjan annotacii ==
-'''Igor Brodskin''' "Kalarand"-roman om ezmäine sur' kirjutez norel vepsän kirjkelel. Brodski kirjutab siš, midä holdutab noren mehen ezmäi kaiked — armastuses. Kalarand om penikaine lidnut, no sigä-ki kehub elo, ristitud oma kosketusiš toine toiženke, sündub erazvuiččed tegoid... Nece kaik jätab süvän jäl'gen noren mehen südäimehe.
+Igor Brodskin "Kalarand"-roman om ezmäine sur' kirjutez norel vepsän kirjkelel. Brodski kirjutab siš, midä holdutab noren mehen ezmäi kaiked — armastuses. Kalarand om penikaine lidnut, no sigä-ki kehub elo, ristitud oma kosketusiš toine toiženke, sündub erazvuiččed tegoid... Nece kaik jätab süvän jäl'gen noren mehen südäimehe.
+</small>
 
-[[Kategorii:Vepsän kel']]
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
-[[Kategorii:Vepsän literatur]]
