*Empty MediaWiki Message*

--- a/Kalarand.mw
+++ b/Kalarand.mw
@@ -10,3 +10,4 @@ Igor Brodskin "Kalarand"-roman om ezmäine sur' kirjutez norel vepsän kirjkelel
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
+[[Kategorii:Romanad]]
