*Empty MediaWiki Message*

--- a/Stojanov_Jurii.mw
+++ b/Stojanov_Jurii.mw
@@ -9,5 +9,6 @@
 
 [[Kategorii:Aktörad kirjamišton mödhe]]
 
+[[az:Yuri Stoyanov]]
 [[fr:Iouri Nikolaïevitch Stoïanov]]
 [[ru:Стоянов, Юрий Николаевич]]
