Создала у понтийцев. Надеюсь, не изобьют ;3

--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -108,6 +108,7 @@
 [[mk:Modern Talking]]
 [[nl:Modern Talking]]
 [[no:Modern Talking]]
+[[pnt:Modern Talking]]
 [[pl:Modern Talking]]
 [[pt:Modern Talking]]
 [[ro:Modern Talking]]
