*Empty MediaWiki Message*

--- a/Avstralii_(valdkund).mw
+++ b/Avstralii_(valdkund).mw
@@ -25,6 +25,62 @@
 Eläjiden lugu om 22,934,849 ristitud (2012). Pind om 7,617,930 km².
 
 Valdkundan pämez' om britanijan kunigaznaine [[Elizavet Toine]]. Päministr om [[Gillard Džulija|Džulija Gillard]].
+
+== Administrativiž-territorialine jagand ==
+
+{| border="1" style="border-collapse:collapse; border-color:#ffffff; margin-top:1px; margin-bottom:15px; font-size:95%" cellpadding="1" width="100%"
+|-
+! bgcolor="#ffffff" rowspan="18" width="35%"|<imagemap>
+Fail:Australia map (ru).svg|280px|center|Avstralijan administrativiž-territorialine jagand
+rect 001 001 260 400 [[Западная Австралия]]
+rect 250 001 400 270 [[Pohjoine territorii]]
+rect 250 260 430 500 [[Suviavstralii]]
+rect 390 001 700 330 [[Kvinslend]]
+rect 440 380 530 500 [[Viktorii (Avstralii)|Viktorii]]
+rect 440 320 700 480 [[Uz' Suviuel's]]
+rect 300 510 600 700 [[Tasmanii]]
+</imagemap>
+! align="center" bgcolor="#eeeeff" width="5%"|№
+! align="center" bgcolor="#eeeeff" width="5%"| Flag
+! align="center" bgcolor="#eeeeff" width="18%"| Nimi
+! align="center" bgcolor="#eeeeff" width="10%"| Adm. ühtnikan tip
+! align="center" bgcolor="#eeeeff" width="10%"| Pälidn
+! align="center" bgcolor="#eeeeff" width="10%"| Ristišt<br />(2010)
+! align="center" bgcolor="#eeeeff" width="22%"| Pind (km²)
+|- align=center
+| 1
+| [[Fail:Flag of the Australian Capital Territory.svg|22x20px|border|link=Avstralijan pälidnan territorii]] ||align=left| [[Avstralijan pälidnan territorii]] || Territorii ||align=left| [[Kanberr]] ||align=right| 363 800 ||align=right| 2 358
+|- align=center
+|2
+| [[Fail:Flag of Victoria (Australia).svg|22x20px|border|link=Viktorii (Avstralii)]] ||align=left| [[Viktorii (Avstralii)|Viktorii]] || Štat ||align=left| [[Mel'burn]] ||align=right| 5 605 600 ||align=right| 227 416
+|- align=center
+|3
+| [[Fail:Flag of Western Australia.svg|22x20px|border|link=Päivlaskmaine Avstralii]] ||align=left| [[Päivlaskmaine Avstralii]] || Štat ||align=left| [[Pert (Avstralii)|Pert]] ||align=right| 2 331 500 ||align=right| 2 529 875
+|- align=center
+|4
+| [[Fail:Flag of Queensland.svg|22x20px|border|link=Kvinslend]] ||align=left| [[Kvinslend]] || Štat ||align=left| [[Brisben]] ||align=right| 4 561 700 ||align=right| 1 730 648
+|- align=center
+|5
+| [[Fail:Flag of New South Wales.svg|22x20px|border|link=Uz' Suviuel's]] ||align=left| [[Uz' Suviuel's]] || Štat ||align=left| [[Sidnei]] ||align=right| 7 287 600 ||align=right| 800 642
+|- align=center
+|6
+| [[Fail:Flag of the Northern Territory.svg|22x20px|border|link=Pohjoine territorii]] ||align=left| [[Pohjoine territorii]] || Territorii ||align=left| [[Darvin (Lidn)|Darvin]] ||align=right| 229 200 ||align=right| 1 349 129
+|- align=center
+|7
+| [[Fail:Flag of Tasmania.svg|22x20px|border|link=Tasmanii]] ||align=left| [[Tasmanii]] || Štat ||align=left| [[Hobart]] ||align=right| 510 200 ||align=right| 68 401
+|- align=center
+|8
+| [[Fail:Flag of South Australia.svg|22x20px|border|link=Suviavstralii]] ||align=left| [[Suviavstralii]] || Štat ||align=left| [[Adelaid]] ||align=right| 1 654 200 ||align=right| 983 482
+|- style="background: #CCC;"
+| ||   ||Kaiked||   ||    ||align=right|22 543 800||align=right|7 691 951
+|-
+|}
+
+
+
+
+
+
 {{stub}}
 
 [[Kategorii:Avstralii (valdkund)]]
