*Empty MediaWiki Message*

--- a/Vrilissii.mw
+++ b/Vrilissii.mw
@@ -11,7 +11,7 @@
  | Fail = Πλατεία 28ης Οκτωβρίου Πάτημα.jpg
  | Pämez' = Kostas Ionnidis
  | Telefonkod = +30-21
- | Aigvö = [[UTC]]-3
+ | Aigvö = [[UTC]]+2
 }}
 '''Vrilissii''' ([[grekan kel'|grek.]]: ''Βριλήσσια'') om lidn [[Grekanma]]s.
 
