--- a/Derbent.mw
+++ b/Derbent.mw
@@ -1,5 +1,5 @@
 [[Fail:Derbent winter.jpg|thumb|350px|Narin kale]]
-'''Derbent''' ([[Venäkel'|ven]].: ''Дербент'', [[Lezginan kel'|lezg]].: ''Кьвевар'') om lidn [[Venäma]]s, [[Dagestanan Tazovaldkund]]as.
+'''Derbent''' ([[Venäkel'|ven]].: ''Дербент'', [[Lezginan kel'|lezg]].: ''Кьвевар'') om lidn [[Venäma]]s, [[Dagestanan Tazovaldkund]]as; [[Derbentan rajon]]an keskuz.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
