*Empty MediaWiki Message*

--- a/Kal'kulätor.mw
+++ b/Kal'kulätor.mw
@@ -1,4 +1,4 @@
-[[Fail:Casio-fx115ES-5564.jpg|thumb|right|250px|Nügüd'aigaine tedokal'kulätor]]
+[[Fail:Casio-fx115ES-5564.jpg|thumb|right|250px|Nügüd'aigaine [[Casio]]-firman tedokal'kulätor]]
 '''Kal'kulätor''' om elektrine ladim erazvuiččiden [[arifmetik|arifmetižiden]] operacioiden täht.
 {{stub}}
 
