*Empty MediaWiki Message*

--- a/Omnibus.mw
+++ b/Omnibus.mw
@@ -12,17 +12,19 @@ Ezmäine regulärine omnibusmaršrut oli tehtud vl. 1662 [[Pariž]]ha.
 [[bg:Омнибус]]
 [[cs:Omnibus]]
 [[de:Pferdeomnibus]]
+[[en:Horsebus]]
 [[eo:Omnibuso]]
 [[fr:Omnibus]]
 [[fy:Omnibus (ferfiermiddel)]]
 [[hu:Omnibusz]]
+[[it:Carozza#Omnibus]]
 [[io:Omnibuso]]
 [[ja:乗合馬車]]
 [[ko:옴니버스 영화]]
 [[lb:Omnibus (Kutsch)]]
 [[lt:Omnibusas]]
 [[nl:Omnibus (vervoermiddel)]]
-[[pl:Omnibus (pojazd)]]
+[[pl:Omnibus (pojazd)#Konny omnibus]]
 [[pt:Ónibus]]
 [[ru:Омнибус]]
 [[sk:Omnibus (doprava)]]
