*Empty MediaWiki Message*

--- a/Jeršov_Viktor.mw
+++ b/Jeršov_Viktor.mw
@@ -1,5 +1,5 @@
 '''Viktor Jeršov''' — [[Vepsläižed|vepsläine]] runokirjutai. Om sündnu [[Vingl]]aha. Runod vepsän kelel erazvuiččiš keradusiš, periodikas.
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
-[[Kategorii:Vepsän kirjutajad]]
+[[Kategorii:Runokirjutajad]]
+[[Kategorii:Vepsän runokirjutajad]]
