--- a/Omnibus.mw
+++ b/Omnibus.mw
@@ -17,7 +17,7 @@ Ezmäine regulärine omnibusmaršrut oli tehtud vl. 1662 [[Pariž]]ha.
 [[fr:Omnibus]]
 [[fy:Omnibus (ferfiermiddel)]]
 [[hu:Omnibusz]]
-[[it:Carozza#Omnibus]]
+[[it:Carrozza#Omnibus]]
 [[io:Omnibuso]]
 [[ja:乗合馬車]]
 [[ko:옴니버스 영화]]
