*Empty MediaWiki Message*

--- a/REMA.mw
+++ b/REMA.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Dubbster
  | Sait = http://rema.myweb.ge/web/index.html
 }}
-'''«REMA»''' om [[Gruzii|gruzijalaine]] [[al'ternativine rok|al'ternativrok]]-/[[nümetal]]grupp [[Tbilisi]]späi, [[2002]]. vlspäi. Om üks' populärižiš Gruzijan al'ternativižen rokgruppašpäi. 
+'''«REMA»''' om [[Gruzii|gruzijalaine]] [[al'ternativine rok|al'ternativrok]]-/[[nümetal]]grupp [[Tbilisi]]späi, [[2002]]. vlspäi. Om üks' populärižiš Gruzijan al'ternativižiš rokgruppoišpäi. 
 
 Mülükund om ''Kobi Mandžgaladze'' (gitar), ''Giga Čihradze'' (barabanad), ''Nik Kiknadze'' (vokal, gitar) da ''Georgii Kakalašvili'' (bass).
 
