*Empty MediaWiki Message*

--- a/Kal'kulätor.mw
+++ b/Kal'kulätor.mw
@@ -1,5 +1,5 @@
 [[Fail:Casio-fx115ES-5564.jpg|thumb|right|250px|Nügüd'aigaine [[Casio]]-firman tedokal'kulätor]]
-'''Kal'kulätor''' om elektrine ladim erazvuiččiden [[arifmetik|arifmetižiden]] operacioiden täht.
+'''Kal'kulätor''' om elektrine ladim erazvuiččiden [[arifmetik|arifmetižiden]] operacijoiden täht.
 {{stub}}
 
 [[Kategorii:Lugend]]
