*Empty MediaWiki Message*

--- a/Kukuruz.mw
+++ b/Kukuruz.mw
@@ -1,7 +1,7 @@
 [[Fail:Corn 01625 Nevit.jpg|thumb|right|250px|Kukuruzan počatkad]]
-'''Kukuruz''' om heinäsine [[kazmused|kazmuz]]. Eziauguižin kazvahtui [[Meksik]]as, no nügüd' kul'tiviruidud kaiked mail'madme.
+'''Kukuruz''' om heinäsine [[kazmused|kazmuz]]. Eziauguižin kazvoi [[Meksik]]as, no nügüd' om kul'tiviruidud kaiked mail'madme.
 
-Plodad (počatkad) oma sobadad.
+Plodud (počatkad) oma sobadad.
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
