--- a/Derbent.mw
+++ b/Derbent.mw
@@ -1,7 +1,7 @@
 [[Fail:Derbent winter.jpg|thumb|350px|Narin kale]]
 '''Derbent''' ([[Venäkel'|ven]].: ''Дербент'', [[Lezginan kel'|lezg]].: ''Кьвевар'', [[azerbaidžanan kel'|azer.]]: ''Dərbənd'') om lidn [[Venäma]]s, [[Dagestanan Tazovaldkund]]as; [[Derbentan rajon]]an keskuz.
 
-Om üks' amuižiš lidnaspäi [[Venäma]]n territorijas.
+Om üks' amuižiš lidnoišpäi [[Venäma]]n territorijas.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
