*Empty MediaWiki Message*

--- a/Sontaga.mw
+++ b/Sontaga.mw
@@ -15,7 +15,7 @@
 }}
 '''Sontaga''' ([[venäkel'|ven.]]: ''Заболотье'') om [[Vepsänma|vepsän]] külä [[Vologdan agj]]an [[Babajevon rajon]]as.
 
-Külän eläjiden lugu om 45 ristituid (2002).
+Külän eläjiden lugu om 45 ristitud (2002).
 {{stub}}
 
 [[Kategorii:Babajevon rajon]]
