--- a/Derbentan_rajon.mw
+++ b/Derbentan_rajon.mw
@@ -1,7 +1,9 @@
 [[Fail:Dagestan-Derbentskiy-district.PNG|thumb|right|250px|Derbentan rajonan kart]]
 '''Derbentan rajon''' ([[venäkel'|ven.]]: ''Дербентский район'', [[lezginan kel'|lezg.]]: ''Дербент район'', [[azerbaidžanan kel'|azer.]]: ''Dərbənd rayonu'') om rajon [[Dagestanan Tazovaldkund]]as ([[Venäma]]).
 
-Pind om 823 km², eläjiden lugu om 93,282 ristituid (2012).
+Pind om 823 km², eläjiden lugu om 93,282 ristitud (2012).
+
+Administrativine keskuz — [[Derbent]].
 {{stub}}
 
 [[Kategorii:Dagestanan Tazovaldkund]]
