--- a/Abramov_Nikolai.mw
+++ b/Abramov_Nikolai.mw
@@ -6,9 +6,9 @@ Abramov om sündnu [[Ladv|Ladvaha]], [[Podporožjen rajon|Podporožjen (Kos'kena
 Abramovan vepsänkeližed da venäkeližed runod om painud 1980 vodelpäi. 1994 vodel ozutihe «Koumekümne koume»-runokeraduz, ezmäine vepsänkeline čomamahtoine kirj. Abramovan runod oma kätud [[Suomen kel'|suomen]], [[Estin kel'|estin]], mad'jaran kelihe da toižihe kelihe.
 
 == Kirjad ==
-* ''Koumekümne koume: runokirj''. Petroskoi: "Karjal", 1994.
-* ''Kurgiden aig''. Petroskoi: "Periodik", 1999.
-* ''Pagiškam, vell' (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
+* ''[[Koumekümne koume]] (Тридцать три)''. Petroskoi: "Karjal", 1994.
+* ''[[Kurgiden aig]] (Время журавлей)''. Petroskoi: "Periodik", 1999.
+* ''[[Pagiškam, vell]]' (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
 
 == Irdkosketused ==
 * [http://www.admhmao.ru/people/finougr/html/poezia/vepsi/index.html Biografii Suomalaiž-ugrilaižiden runokirjutajiden Kahesanden kongressan saital] (venäkelel)
