--- a/Abramov_Nikolai.mw
+++ b/Abramov_Nikolai.mw
@@ -8,7 +8,7 @@ Abramovan vepsänkeližed da venäkeližed runod om painud 1980 vodelpäi. 1994 
 == Kirjad ==
 * ''[[Koumekümne koume]] (Тридцать три)''. Petroskoi: "Karjal", 1994.
 * ''[[Kurgiden aig]] (Время журавлей)''. Petroskoi: "Periodik", 1999.
-* ''[[Pagiškam, vell]]' (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
+* ''[[Pagiškam, vell']] (Поговорим, брат)''. Petroskoi: "Periodik", 2005.
 
 == Irdkosketused ==
 * [http://www.admhmao.ru/people/finougr/html/poezia/vepsi/index.html Biografii Suomalaiž-ugrilaižiden runokirjutajiden Kahesanden kongressan saital] (venäkelel)
