--- a/Kurgiden_aig.mw
+++ b/Kurgiden_aig.mw
@@ -1,4 +1,4 @@
-'''«Kurgiden aig»''' om [[Abramov Nikolai|Nikalajan Abramovan]] toine kirj, runokogoduz [[Vepsän kel'|vepsän]] i [[Venäkel'|venän]] kelil. Pästtud vl [[1999]] [[Petroskoi]]š.
+'''«Kurgiden aig»''' om [[Abramov Nikolai|Nikalajan Abramovan]] toine kirj, runokogoduz [[Vepsän kel'|vepsän]] kelel. Pästtud vl [[1999]] [[Petroskoi]]š.
 
 == Irdkosketused ==
 * [http://library.karelia.ru/elbiblio/veps/%DD%EB%E5%EA%F2%F0%EE%ED%ED%FB%E5%20%E8%E7%E4%E0%ED%E8%FF/kurgiden_aig.html «Kurgiden aig» elektronižes kirjamištos]
