--- a/Koumekümne_koume_(kirj).mw
+++ b/Koumekümne_koume_(kirj).mw
@@ -1,4 +1,4 @@
-'''«Koumekümne koume»''' om [[Abramov Nikolai|Nikalajan Abramovan]] ezmäine kirj, runokogoduz. Pästtud vl [[1994]] [[Petroskoi]]š.
+'''«Koumekümne koume»''' om [[Abramov Nikolai|Nikalajan Abramovan]] ezmäine kirj, runokogoduz [[Vepsän kel'|vepsän]] kelel. Pästtud vl [[1994]] [[Petroskoi]]š.
 
 == Irdkosketused ==
 * [http://library.karelia.ru/elbiblio/veps/%DD%EB%E5%EA%F2%F0%EE%ED%ED%FB%E5%20%E8%E7%E4%E0%ED%E8%FF/koume.html «Koumekümne koume» elektronižes kirjištos]
