*Empty MediaWiki Message*

--- a/Vrilissii.mw
+++ b/Vrilissii.mw
@@ -15,7 +15,7 @@
 }}
 '''Vrilissii''' ([[grekan kel'|grek.]]: ''Βριλήσσια'') om lidn [[Grekanma]]s.
 
-Pind om läz 4,000 km². Lidnan eläjiden lugu om 40,312 ristituid (2010).
+Pind om läz 4,000 km². Lidnan eläjiden lugu om 40,312 ristitud (2010).
 
 Vrilissijan pämez' om Kostas Ionnidis.
 {{stub}}
