*Empty MediaWiki Message*

--- a/Taranto.mw
+++ b/Taranto.mw
@@ -15,7 +15,7 @@
 }}
 '''Taranto''' ([[italijan kel'|ital.]]: ''Taranto'', [[tarantinon dialekt|tarant.]]: ''Tarde'', [[grekan kel'|grek.]]: ''Τάραντας'', [[latinan kel'|lat.]]: ''Tarentum'') om lidn [[Italii|Italijas]], [[Apulii]]-regionas.
 
-Pind om läz 217 km². Lidnan eläjiden lugu om 193,884 ristituid (2009).
+Pind om läz 217 km². Lidnan eläjiden lugu om 193,884 ristitud (2009).
 
 Taranton pämez' om [[Stefano Ippacio|Ippacio Stefano]].
 {{stub}}
