--- a/Murmansk.mw
+++ b/Murmansk.mw
@@ -9,6 +9,9 @@
 |Pind|| 154,4 km²
 |}
 '''Murmansk''' ([[Venäkel'|ven.]]: ''Мурманск'') om lidn [[Venäma]]s. Se om [[Murmanskan agj]]an keskuz.
+
+[[Fail:Road in Murmansk.jpg|thumb|left|300px|Ird Murmanskas]]
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
