*Empty MediaWiki Message*

--- a/Sortaval.mw
+++ b/Sortaval.mw
@@ -1,4 +1,12 @@
 '''Sortaval''' ([[Venäkel'|ven]].: ''Сортавала'') om lidn [[Venäma]]s, [[Karjalan Tazovaldkund]]as.
+
+Sortavalas om pandud [[Šemeikka Petri|Petrin Šemeikkan]] muštpacaz, kudamb oli tetaban [[Karjalaižed|karjalaižen]] [[runonpajatai|runonpajatajan]] [[XIX. voz'sada|XIX]]-ndel voz'sadal.
+
+
+
+
+
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
