*Empty MediaWiki Message*

--- a/Ganter_Henri.mw
+++ b/Ganter_Henri.mw
@@ -1,4 +1,4 @@
-[[Fail:Guntherplaque.JPG|thumb|Genrin Ganteran kaum]]
+[[Fail:Guntherplaque.JPG|thumb|right|250px|Genrin Ganteran kaum]]
 '''Henri Nikolas Ganter''' ([[anglijan kel'|angl.]] ''Henry Nicholas Gunther''; sünd. [[6. kezaku]] [[1895]], [[Baltimor]], [[AÜV]] — kol. [[11. kül'mku]] [[1918]]) oli jäl'gmäine saldat, kudamb pölistui [[Ezmäine mail'man voin|Ezmäižes mail'man voinas]]. Hän oli riktud ühtes minutas edel voinan lopud 11:00 časud kül'mkun 11. päiväl.
 
 == Edeline elo ==
