--- a/Modern_Talking:an_diskografii.mw
+++ b/Modern_Talking:an_diskografii.mw
@@ -116,8 +116,8 @@ Se om täuz' '''[[Modern Talking]]-kollektivan diskografii'''.
 # '''[[Just Like An Angel]]''' — 2001 '''''(butleg-singl)'''''
 # '''[[I Need You Now]]''' — 2001 '''''(butleg-singl)'''''
 # '''[[New York City Girl]]''' — 2001 '''''(butleg-singl)'''''
-# '''[[Summer In December]]''' — 2002 '''''(butleg-singl)'''''
-# '''[[10 Seconds To Countdown]]''' — 2002 '''''(butleg-singl)'''''
+# '''[[Summer in December]]''' — 2002 '''''(butleg-singl)'''''
+# '''[[10 Seconds to Countdown]]''' — 2002 '''''(butleg-singl)'''''
 
 == Kacu mugažo ==
 * [[Modern Talking:an pajod]]
