*Empty MediaWiki Message*

--- a/Victory.mw
+++ b/Victory.mw
@@ -8,7 +8,14 @@
 # ''Higher Than Heaven'' (3:33)
 # ''You're Not Lisa'' (3:05)
 # ''When the Sky Rained Fire'' (3:45)
-# ''[[Summer in December]]'' 
+# ''[[Summer in December]]'' (3:36)
+# ''[[10 Seconds to Countdown]]'' (3:20)
+# ''Love to Love You'' (3:29)
+# ''Blue Eyed Coloured Girl'' (4:13)
+# ''We Are the Children of the World'' (3:16)
+# ''Mrs. Robota'' (3:27)
+# ''If I...'' (4:50)
+# ''Who Will Love You Like I Do'' (4:01)
 {{stub}}
 {{Modern Talking}}
 
