--- a/Däižed_lindud_lanktoba_oksilpei.mw
+++ b/Däižed_lindud_lanktoba_oksilpei.mw
@@ -1,3 +1,4 @@
+[[Image:Vepsajulkjaatyneet.jpg|thumb|rihgt|Pästandan kirjankor']]
 '''«Däižed lindud lanktoba oksilpei»''' (kirjkelel: ''Jäižed lindud lankteba oksilpäi'', [[suomen kel'|suom.]]: ''Jäätyneet linnut putoavat oksiltaan'', [[venäkel'|ven.]]: ''Замёрзшие птицы падают с веток'') om [[2001]]-žen voden [[Raisa Lordot|Raisan Lardotan]] runokogoduz [[vepsän kel'|vepsän kelel]].
 {{stub}}
 
