*Empty MediaWiki Message*

--- a/Kurgiden_aig.mw
+++ b/Kurgiden_aig.mw
@@ -1,3 +1,4 @@
+[[Image:Vepsjulkkurgidenaig.jpg|right|thumb|Pästandan kirjankor']]
 '''«Kurgiden aig»''' om [[Abramov Nikolai|Nikalajan Abramovan]] toine kirj, runokogoduz [[Vepsän kel'|vepsän]] kelel. Pästtud vl [[1999]] [[Petroskoi]]š.
 
 == Irdkosketused ==
