Я закажу себе эту книгу )

--- a/Minun_rahvhan_fol'klor.mw
+++ b/Minun_rahvhan_fol'klor.mw
@@ -1,4 +1,5 @@
-'''«Meiden rahvhan fol'klor»''' om [[Lonin Rürik|Rürikan Loninan]] kirj [[Vepsän kel'|vepsän kelel]], [[Vepsläižed|vepsän]] fol'kloran kogoduz. Pästtud vl [[2000]] [[Petroskoi]]š.
+[[Image:Vepsjulk lonin.jpg|right|thumb|Pästandan kirjankor']]
+'''«Minun rahvhan fol'klor»''' om [[Lonin Rürik|Rürikan Loninan]] kirj [[Vepsän kel'|vepsän kelel]], [[Vepsläižed|vepsän]] fol'kloran kogoduz. Pästtud vl [[2000]] [[Petroskoi]]š.
 
 Kirjas oma kogotud erazvuiččed rahvahan sarnad, pajod, muštatišed, anekdotad da toižed fol'kloran ozutesed.
 
