*Empty MediaWiki Message*

--- a/Pagiškam,_vell'.mw
+++ b/Pagiškam,_vell'.mw
@@ -1,4 +1,4 @@
-[[Image:Vepsjulkpagizemvel.jpg|right|thumb|Pästandan kirjankor']]
+[[Image:Vepsjulkpagiskamvel.jpg|right|thumb|Pästandan kirjankor']]
 '''«Pagiškam, vell'»''' ([[Venäkel'|ven.]]: ''Поговорим, брат'') om [[Abramov Nikolai|Nikolajan Abramovan]] koumanz' kirj, runokogoduz [[Vepsän kel'|vepsän]] i [[Venäkel'|venän]] kelil. Pästtud vl [[2005]] [[Petroskoi]]š.
 
 {{stub}}
