--- a/Ueils_Džimmi.mw
+++ b/Ueils_Džimmi.mw
@@ -1,5 +1,10 @@
 [[Fail:Jimmy Wales 706.jpg|thumb|right|250px|Džimmi Uels]]
 '''Džimmi Donal Uels''' ([[anglijan kel'|angl.]]: ''Jimmy Donal Wales''; [[nikneim]] — '''Jimbo Wales'''; sünd. [[7. eloku]] [[1966]], [[Hantsvill (Alabam)]], [[AÜV]]) om amerikalaine edheotai, [[Vikipedii|Vikipedijan]] alusenpanii, [[Vikimedii]]-fondan ezimez'.
+
+== Irdkosketused ==
+* [http://jimmywales.com/ Džimmin Uelsan oficialine sait]
+* [http://twitter.com/jimmy_wales Džimmi Uels Tvitteras]
+
 {{stub}}
 
 [[Kategorii:Vikimedii]]
