*Empty MediaWiki Message*

--- a/Džasper.mw
+++ b/Džasper.mw
@@ -1,2 +1,6 @@
-{{delete}}
-#suuna [[Džasper (lidn, Minnesota)]]
+'''Džasper''':
+* [[Džasper (lidn, Minnesota)]]
+
+[[Kategorii:Tärtused]]
+
+[[en:Jasper]]
