*Empty MediaWiki Message*

--- a/Džasper.mw
+++ b/Džasper.mw
@@ -1,5 +1,14 @@
 '''Džasper''':
-* [[Džasper (lidn, Minnesota)]]
+
+== [[AÜV]]:oiš ==
+* [[Džasper (lidn, Minnesot)]]
+
+== [[Kanad]]as ==
+* [[Džasper (Al'bert)]]
+
+== [[Avstralii (valdkund)|Avstralijas]] ==
+* [[Džasper (järv)]]
+
 
 [[Kategorii:Tärtused]]
 
