*Empty MediaWiki Message*

--- a/Džasper.mw
+++ b/Džasper.mw
@@ -2,6 +2,17 @@
 
 == [[AÜV]]:oiš ==
 * [[Džasper (lidn, Minnesot)]]
+* [[Džasper (Alabam)]]
+* [[Džasper (Arkanzas)]]
+* [[Džasper (Florid)]]
+* [[Džasper (Džordžii)]]
+* [[Džasper (Indian)]]
+* [[Džasper (Missuri)]]
+* [[Džasper (Uz' Jork)]]
+* [[Džasper (Ogajo)]]
+* [[Džasper (Oregon)]]
+* [[Džasper (Tennesi)]]
+* [[Džasper (Tehas)]]
 
 == [[Kanad]]as ==
 * [[Džasper (Al'bert)]]
