*Empty MediaWiki Message*

--- a/Džasper.mw
+++ b/Džasper.mw
@@ -23,4 +23,17 @@
 
 [[Kategorii:Tärtused]]
 
+[[ca:Jasper]]
+[[de:Jasper]]
 [[en:Jasper (disambiguation)]]
+[[es:Jasper]]
+[[fr:Jasper]]
+[[it:Jasper]]
+[[nl:Jasper]]
+[[ja:ジャスパー]]
+[[pl:Jasper]]
+[[pt:Jasper]]
+[[ro:Jasper (dezambiguizare)]]
+[[fi:Jasper]]
+[[sv:Jasper]]
+[[vo:Jasper]]
