*Empty MediaWiki Message*

--- a/Änine_(jogi).mw
+++ b/Änine_(jogi).mw
@@ -1,4 +1,4 @@
-[[Fail:P6140254.jpg|thumb|right|250px|Änižjogi]]
+[[Fail:P6140254.jpg|thumb|right|250px|Änižjogi [[Severoonežsk]]as]]
 '''Änine''' ('''Änine-jogi''' vai '''Änižjogi'''; [[venäkel'|ven.]]: ''Онега'') om jogi [[Venäma]]s.
 
 Jogen piduz om 416 km, basseinan pind om 56,900 km².
