*Empty MediaWiki Message*

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Hungary.svg|300px]]
 |}
-'''Mad'jaranma''' (vai ''Vengrii'') (mad'jaran kelel: ''Magyarország'') om valdkund [[Evropa]]s, [[EÜ]]n ühtnii. Mad'jaranman pälidn om [[Budapešt]].
+'''Mad'jaranma''' (vai ''Vengrii'') ([[Mad'jaran kel'|mad'j.]]: ''Magyarország'') om valdkund [[Evropa]]s, [[EÜ]]n ühtnii. Mad'jaranman pälidn om [[Budapešt]].
 
 Eläjiden lugu — 10 mln.
 
