--- a/Trier_Lars_fon.mw
+++ b/Trier_Lars_fon.mw
@@ -1,5 +1,5 @@
 [[Fail:Lars Von Trier Cannes 2011.jpg|thumb|right|200px|Lars fon Trier [[Kannoiden feslival'|Kannoiden feslivalil]]]]
-'''Lars fon Trier''' (sünd. [[30. sulaku]] [[1956]], [[Kopengagen]], [[Danii]]) om [[Danii|danijalaine]] režissör i scenarist.
+'''Lars fon Trier''' (sünd. [[30. sulaku]] [[1956]], [[Kopengagen]], [[Danii]]) om [[Danii|danijalaine]] režissör i kinotarinantegii.
 
 == Fil'mad ==
 
@@ -19,7 +19,7 @@
 {{stub}}
 
 [[Kategorii:Režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Kinotarinantegijad]]
 
 [[ar:لارس فون ترايير]]
 [[az:Lars Fon Trier]]
