*Empty MediaWiki Message*

--- a/Deblua_Din.mw
+++ b/Deblua_Din.mw
@@ -1,9 +1,9 @@
 [[Fail:Dean DeBlois(Wiki).jpg|thumb|right|250px|Din Deblua]]
-'''Din Deblua''' ([[anglijan kel'|angl.]]: ''Dean DeBlois''; sünd. [[7. kezaku]] [[1970]], [[Eilmer (Kvebek)]], [[Kanad]]) om kanadalaine scenarist da režissör.
+'''Din Deblua''' ([[anglijan kel'|angl.]]: ''Dean DeBlois''; sünd. [[7. kezaku]] [[1970]], [[Eilmer (Kvebek)]], [[Kanad]]) om kanadalaine kinotarinantegii da režissör.
 {{stub}}
 
 [[Kategorii:Režissörad]]
-[[Kategorii:Scenaristad]]
+[[Kategorii:Kinotarinantegijad]]
 
 [[de:Dean DeBlois]]
 [[en:Dean DeBlois]]
