--- a/Vepsän_mec.mw
+++ b/Vepsän_mec.mw
@@ -1,6 +1,7 @@
 '''Vepsän mec''' ([[venäkel'|ven]]: ''Вепсский лес'') om londuseline puišt [[Leningradan agj]]as. Pind om läz 189,100 gektarad. Om istorine, kul'turine da londusenkaičine znamoičend.
 {{stub}}
 
+[[Kategorii:Vepsänma]]
 [[Kategorii:Londusenkaičend]]
 [[Kategorii:Puištad]]
 
