*Empty MediaWiki Message*

--- a/Studio_Ghibli.mw
+++ b/Studio_Ghibli.mw
@@ -1,5 +1,5 @@
 [[Fail:Studio Ghibli.png|right|border|350px]]
-'''Studio Ghibli (Dzibli-studii)''' ([[japonine kel'|jap.]]: ''スタジオジブリ'') om [[Japonii|japonijalaine]] animacine studii.
+'''Studio Ghibli (Dzibli-studii)''' ([[japonijan kel'|jap.]]: ''スタジオジブリ'') om [[Japonii|japonijalaine]] animacine studii.
 
 Sen aluz om pandud vl. [[1985]] (faktižikš — vl. [[1983]]) [[Tokio]]s. Sen tegii da direktor om [[Mijadzaki Hajao|Hajao Mijadzaki]].
 
