*Empty MediaWiki Message*

--- a/Nivhalaižed.mw
+++ b/Nivhalaižed.mw
@@ -9,3 +9,5 @@ Lugu om läz 5.200 ristitud (2002). Rahvahan kel' om [[nivhan kel']].
 
 [[Kategorii:Rahvahad]]
 [[Kategorii:Nivhalaižed]]
+
+[[ru:Нивхи]]
