--- a/Taksami_Čuner.mw
+++ b/Taksami_Čuner.mw
@@ -1,4 +1,4 @@
-'''Čuner Mihailovič Taksami''' ([[Venäkel'|ven.]] ''Чунер Михайлович Таксами''; sünd. [[23. uhoku]] [[1931]], Kal'm, [[Habarovskan rand]]) om tedomez', pohjoižentedomez, specialist pohjoižes i [[nivhalaižed|nivhalaižiš]].
+'''Čuner Mihailovič Taksami''' ([[Venäkel'|ven.]] ''Чунер Михайлович Таксами''; sünd. [[23. uhoku]] [[1931]], Kal'm, [[Habarovskan rand]]) om pohjoižentedomez, specialist pohjoižes i [[nivhalaižed|nivhalaižiš]].
 
 Tegi ezmäižed [[Nivhan kel'|nivha]]-venälaižen da venä-nivhalaižen vajehnakad.
 
