*Empty MediaWiki Message*

--- a/Back_for_Good_Tour.mw
+++ b/Back_for_Good_Tour.mw
@@ -21,6 +21,7 @@
 # ''[[Give Me Peace on Earth]]''
 # ''[[Space Mix]]''
 {{stub}}
+{{Modern Talking}}
 
 [[Kategorii:Modern Talking:an koncertižed turad]]
 [[Kategorii:Koncertižed turad kirjamišton mödhe]]
