*Empty MediaWiki Message*

--- a/Must_reig.mw
+++ b/Must_reig.mw
@@ -3,7 +3,7 @@
 {{stub}}
 
 [[Kategorii:Fizik]]
-[[Kategorii:Gravitacižed nägused]]
+[[Kategorii:Relätivistižed da ravitacižed nägused]]
 [[Kategorii:Astronomii]]
 [[Kategorii:Must reigud|*]]
 
