--- a/Must_reig.mw
+++ b/Must_reig.mw
@@ -1,5 +1,5 @@
 [[Fail:Black Hole in the universe.jpg|thumb|right|250px|Must reig]]
-'''Must reig''' om agj [[avaruz|avarudes]] da [[agj]]as lujas suren [[gravitacine pöud|gravitacižen pöudonke]].
+'''Must reig''' om agj [[avaruz|avarudes]] da [[aig]]as lujas suren [[gravitacine pöud|gravitacižen pöudonke]].
 {{stub}}
 
 [[Kategorii:Fizik]]
