*Empty MediaWiki Message*

--- a/Časud.mw
+++ b/Časud.mw
@@ -1,5 +1,5 @@
 [[Fail:RelojParedAgujas.JPG|thumb|right|250px|Tipižed seinäližed časud]]
-'''Časud''' om ladim, kudamb ozutab nügüdläižen päivesen [[aig]]an.
+'''Časud''' om ladim, kudamb ozutab nügüdläižen [[päiv]]esen [[aig]]an.
 {{stub}}
 
 [[Kategorii:Časud|*]]
