--- a/Alone_Tour.mw
+++ b/Alone_Tour.mw
@@ -1,4 +1,4 @@
-'''«Alone Tour»''' om [[1999]]-žen voden [[Modern Talking]]:an koncertine tur.
+'''«[[Alone]] Tour»''' om [[1999]]-žen voden [[Modern Talking]]:an koncertine tur.
 {{stub}}
 {{Modern Talking}}
 
