*Empty MediaWiki Message*

--- a/Year_of_the_Dragon_Tour.mw
+++ b/Year_of_the_Dragon_Tour.mw
@@ -1,4 +1,4 @@
-'''«Year of the Dragon Tour»''' om [[2000]]-žen voden [[Modern Talking]]:an koncertine tur.
+'''«[[Year of the Dragon]] Tour»''' om [[2000]]-žen voden [[Modern Talking]]:an koncertine tur.
 {{stub}}
 {{Modern Talking}}
 
