--- a/Back_for_Good_Tour.mw
+++ b/Back_for_Good_Tour.mw
@@ -1,4 +1,4 @@
-'''«Back for Good Tour»''' om [[1998]]-žen voden [[Modern Talking]]:an koncertine tur.
+'''«[[Back for Good]] Tour»''' om [[1998]]-žen voden [[Modern Talking]]:an koncertine tur.
 * Turan augotiž — [[7. semendku]] [[1998]], [[Magdeburg]] ([[Saksanma]])
 * Turan lopind — [[31. tal'vku]] [[1998]], [[Vel's]] ([[Avstrii]])
 
