*Empty MediaWiki Message*

--- a/Afinad.mw
+++ b/Afinad.mw
@@ -33,9 +33,11 @@
 == Ižanduz ==
 
 {{stub}}
-[[Kategorii:Lidnad|A]]
-[[Kategorii:Pälidnad|A]]
+[[Kategorii:Grekanman lidnad]]
+[[Kategorii:Pälidnad]]
 [[Kategorii:Grekanma]]
+[[Kategorii:Afinad]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[af:Athene]]
 [[als:Athen]]
