*Empty MediaWiki Message*

--- a/Pohjoižmakedonii.mw
+++ b/Pohjoižmakedonii.mw
@@ -33,8 +33,7 @@ Ohjandusen form — [[Tazovaldkund|Parlamentine tazovaldkund]].
 {{Evropa}}
 {{stub}}
 
-[[Kategorii:Geografii]]
-[[Kategorii:Valdkundad]]
+[[Kategorii:Makedonii|*]]
 
 [[ace:Masèdonia]]
 [[af:Republiek van Masedonië]]
