интервики о роде, а не о непосредственно "настоящих пчёлах"

--- a/Mezjäižed.mw
+++ b/Mezjäižed.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Bees_Collecting_Pollen_2004-08-14.jpg|300px|pisi|Mezjäine]]
-'''Mezjäine''' (lat. ''Apoidea'') om [[gaved']].
+'''Mezjäižed''' (lat. ''Apoidea'') oma [[gaved'|gavedid]].
 
 {{stub}}
 
