--- a/Mezjäižed.mw
+++ b/Mezjäižed.mw
@@ -1,7 +1,9 @@
 {{1000}}
-[[Fail:Bees_Collecting_Pollen_2004-08-14.jpg|300px|pisi|Mezjäine]]
+[[Fail:Bees_Collecting_Pollen_2004-08-14.jpg|300px|pisi|[[Mezjäine]]]]
 '''Mezjäižed''' (lat. ''Apoidea'') oma [[gaved'|gavedid]].
 
+== Kacu mugažo ==
+* [[Mezjäine]]
 {{stub}}
 
 [[Kategorii:Gavedid]]
