*Empty MediaWiki Message*

--- a/Jä.mw
+++ b/Jä.mw
@@ -1,4 +1,4 @@
-[[Fail:2012 'Seegfrörni' - Zürichsee - Rapperswil Hafen -Seedamm 2012-02-18 16-54-10 (SX230).JPG|thumb|right|250px|Keväz'jä]]
+[[Fail:2012 'Seegfrörni' - Zürichsee - Rapperswil Hafen -Seedamm 2012-02-18 16-54-10 (SX230).JPG|thumb|right|250px|[[Keväz']]jä]]
 '''Jä''' om kül'menzoittud [[vezi]], veden kova olend.
 {{stub}}
 
