то фото понадобится

--- a/Lumi.mw
+++ b/Lumi.mw
@@ -1,4 +1,4 @@
-[[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird [[lumensagez|lumensagesen]] jäl'ghe]]
+[[Fail:Archangelsk taiga.JPG|thumb|right|250px|Lumi [[Arhangel'skan agj]]an [[taig]]as]]
 '''Lumi''' om [[Atmosferižed sadeged|atmosferižiden sadegiden]] form, kudamb kogoneb [[jä]]n [[kristall]]oišpäi.
 
 == Kacu mugažo ==
