--- a/Lumenlähtend.mw
+++ b/Lumenlähtend.mw
@@ -1,5 +1,5 @@
 [[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird lumensagesen jäl'ghe]]
-'''Lumensagez''' om [[lumi|lumen]] lanktendan process [[pil'v]]oišpäi.
+'''Lumensagez''' om [[lumi|lumen]] lanktendan näguz [[pil'v]]oišpäi.
 {{stub}}
 
 [[Kategorii:Lumi|*]]
