*Empty MediaWiki Message*

--- a/Lumenlähtend.mw
+++ b/Lumenlähtend.mw
@@ -2,6 +2,6 @@
 '''Lumensagez''' om [[lumi|lumen]] lanktendan näguz [[pil'v]]oišpäi.
 {{stub}}
 
-[[Kategorii:Lumi|*]]
+[[Kategorii:Lumi]]
 
 [[ru:Снегопад]]
