*Empty MediaWiki Message*

--- a/Studio_Ghibli.mw
+++ b/Studio_Ghibli.mw
@@ -7,7 +7,7 @@ Sen aluz om pandud vl. [[1985]] (faktižikš — vl. [[1983]]) [[Tokio]]s. Sen t
 {{stub}}
 
 [[Kategorii:Studio Ghibli|*]]
-[[Kategorii:Animacižed studijad]]
+[[Kategorii:Mul'tiplikacižed studijad]]
 [[Kategorii:Animestudijad]]
 
 [[ar:إستديو جيبلي]]
