*Empty MediaWiki Message*

--- a/Lumenlähtend.mw
+++ b/Lumenlähtend.mw
@@ -1,5 +1,5 @@
-[[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird lumensagesen jäl'ghe]]
-'''Lumensagez''' om [[lumi|lumen]] lanktendan näguz [[pil'v]]oišpäi.
+[[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird Lumenlähtendan jäl'ghe]]
+'''Lumenlähtend''' om [[lumi|lumen]] lanktendan näguz [[pil'v]]oišpäi.
 {{stub}}
 
 [[Kategorii:Lumi]]
