*Empty MediaWiki Message*

--- a/Lumenlähtend.mw
+++ b/Lumenlähtend.mw
@@ -1,4 +1,4 @@
-[[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird Lumenlähtendan jäl'ghe]]
+[[Fail:Фурштатская после снегопада (2).jpg|thumb|right|250px|[[Piter]]in ird lumenlähtendan jäl'ghe]]
 '''Lumenlähtend''' om [[lumi|lumen]] lanktendan näguz [[pil'v]]oišpäi.
 {{stub}}
 
