*Empty MediaWiki Message*

--- a/Explay.mw
+++ b/Explay.mw
@@ -1,3 +1,4 @@
+[[Fail:Explay logo.jpg|border|right|250px]]
 '''Explay''' (''Эксплей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimoiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
 
 == Irdkosketused ==
