--- a/Explay.mw
+++ b/Explay.mw
@@ -1,5 +1,5 @@
 [[Fail:Explay logo.jpg|border|right|250px]]
-'''Explay''' (''Эксплей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimoiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
+'''Explay''' (''Эксплей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
 
 == Irdkosketused ==
 * [http://explay.ru/ Oficialine sait] {{ref-ru}}
