*Empty MediaWiki Message*

--- a/Lumi.mw
+++ b/Lumi.mw
@@ -2,7 +2,7 @@
 '''Lumi''' om [[Atmosferižed sadeged|atmosferižiden sadegiden]] form, kudamb kogoneb [[jä]]n [[kristall]]oišpäi.
 
 == Kacu mugažo ==
-* [[Lumensagez]]
+* [[Lumenlähtend]]
 * [[Lumut]]
 {{sä}}
 {{stub}}
