*Empty MediaWiki Message*

--- a/John_(Desireless:an_pajo).mw
+++ b/John_(Desireless:an_pajo).mw
@@ -1,4 +1,4 @@
-'''«John»''' (''Džon'') om [[Desireless]]:an pajo da hänen 2. single «[[François]]»-al'bomas, kudamb om pästtud [[1986]]-žen vodes.
+'''«John»''' (''Džon'') om [[Desireless]]:an pajo da hänen 2. singl «[[François]]»-al'bomas, kudamb om pästtud [[1986]]-žen vodes.
 
 Pajon tekst om [[francijan kel'|francijan kelel]].
 {{stub}}
