*Empty MediaWiki Message*

--- a/Pohjoižsaamen_Vikipedii.mw
+++ b/Pohjoižsaamen_Vikipedii.mw
@@ -3,7 +3,7 @@
 
 Se om avaitud vl. [[2004]], [[20. heinku|heinkun 20 p.]].
 
-Kirjutusiden lugu om {{NUMBEROF|ARTICLES|se}} ({{CURRENTDAY}} {{CURRENTMONTHNAMEGEN}} {{CURRENTYEAR}}).
+Kirjutusiden lugu om {{NUMBEROF|ARTICLES|se}} ({{CURRENTDAY}}. {{CURRENTMONTHNAME}} {{CURRENTYEAR}}).
 
 
 {{Vikipedijad uraližil kelil}}
