--- a/Tundmatomad_modod.mw
+++ b/Tundmatomad_modod.mw
@@ -1,4 +1,4 @@
-'''«Tundmatomad modod»'''
+'''«Tundmatomad modod»''' ([[anglijan kel'|angl.]]: ''Persons Unknown''; [[venäkel']]žes versijas — ''Неизвестные лица'') om voden [[2010]] [[AÜV|amerikalaine]] [[TV-serial]] [[triller]]-žanras. Tegii — [[Makkuorri Kristofer|Kristofer Makkuorri]].
 {{stub}}
 
 [[Kategorii:TV-serialad kirjamišton mödhe]]
