*Empty MediaWiki Message*

--- a/Tundmatomad_modod.mw
+++ b/Tundmatomad_modod.mw
@@ -1,4 +1,6 @@
 '''«Tundmatomad modod»''' ([[anglijan kel'|angl.]]: ''Persons Unknown''; [[venäkel']]žes versijas — ''Неизвестные лица'') om voden [[2010]] [[AÜV|amerikalaine]] [[TV-serial]] [[triller]]-žanras. Tegii — [[Makkuorri Kristofer|Kristofer Makkuorri]].
+
+Serialas om 13 epizodad; sen tehmine om krepttud edelespäi.
 {{stub}}
 
 [[Kategorii:TV-serialad kirjamišton mödhe]]
