--- a/Stepanenko_Jelena.mw
+++ b/Stepanenko_Jelena.mw
@@ -1,7 +1,7 @@
 '''Elena Grigor'jevna Stepanenko''' ([[venäkel'|ven.]]: ''Елена Григорьевна Степаненко''; sünd. [[5. viluku]] [[1954]], [[Volgograd]], [[Venäma]] ([[NSTÜ]])) om venälaine jumorist, TV-vedai da aktör. [[Petrosän Evgenii|Evgenijan Petrosänan]] ak.
 {{stub}}
 
-[[Kategorii:Aktör kirjamišton mödhe]]
+[[Kategorii:Aktörad kirjamišton mödhe]]
 [[Kategorii:TV-vedajad]]
 [[Kategorii:Jumoristad]]
 
