*Empty MediaWiki Message*

--- a/Rik.mw
+++ b/Rik.mw
@@ -1,4 +1,4 @@
-[[Fail:Soufresicile3.jpg|thumb|right|Puhtaz rik]]
+[[Fail:Soufresicile3.jpg|thumb|right|250px|Puhtaz rik]]
 
 '''Rik''' (''S'') om 16nz' himine element [[Himižiden elementoiden periodine tablut|himižiden elementoiden periodižes tabludes]]. Sen sijaduz om kudenden gruppan päalagruppas, tabluden koumandes periodas. Rik om levitadud londuses, i sidä voib löuta puhthas olendas. Puhtaz rik om hahkpakuine hudr substancii hajuta.
 
