*Empty MediaWiki Message*

--- a/Sur'_Ustüg.mw
+++ b/Sur'_Ustüg.mw
@@ -1,4 +1,7 @@
 '''Sur' Ustüg''' ([[Venäkel'|ven.]]: ''Великий Устюг'') om lidn [[Venäma]]s, [[Vologdan agj]]as.
+
+Lidnad lugedas [[Pakaine-Ded]]an kodimaks.
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
