Думаю, в данном случ. šahmat- надо слитно

--- a/Šahmatad.mw
+++ b/Šahmatad.mw
@@ -1,13 +1,13 @@
 [[Fail:Chess-king.JPG|thumb|right|250px|Šahmatad]]
 '''Šahmatad''' oma logine [[laudanvänd]]. Sätud amuižes [[Indii|Indijas]].
 
-Vätas kaks' vändajad. Om kuz [[šahmatoiden figurad|figurad]], sijadud [[šahmatoiden laud|laudal]] 64 stajidenke. Figurad da stajad oma kaks' mujud — [[vauged muju|vauged]] da [[must muju|must]]. Tobjimalaz vänd vedab aigaks.
+Vätas kaks' vändajad. Om kuz [[šahmatfigurad|figurad]], sijadud [[šahmatlaud|laudal]] 64 stajidenke. Figuroil da stajil om kaks' mujud — [[vauged muju|vauged]] da [[must muju|must]]. Tobjimalaz vänd vedab aigaks.
 
 == Kacu mugažo ==
-* [[Šahmatoiden figurad]], [[Šahmatoiden laud|laud]] da [[Šahmatoiden časud|časud]]
+* [[Šahmatfigurad]], [[Šahmatlaud|laud]] da [[Šahmatčasud|časud]]
 * [[Debüt (šahmatad)|Debüt]], [[endšpil']]
-* [[Šahmatoiden ohjandimed]], [[Šahmatoiden taktik|taktik]], [[Šahmatoiden strategii|strategii]]
-* [[Šahmatoiden variantad]]
+* [[Šahmatohjandimed]], [[Šahmattaktik|taktik]], [[Šahmatstrategii|strategii]]
+* [[Šahmatvariantad]]
 {{stub}}
 
 [[Kategorii:Šahmatad|*]]
