*Empty MediaWiki Message*

--- a/Pakaine-Ded.mw
+++ b/Pakaine-Ded.mw
@@ -1,4 +1,4 @@
-[[Fail:Ded moroz belarus 1.jpg|thumb|right|300px|Pakaine Ded i Sneguročka]]
+[[Fail:Ded moroz belarus 1.jpg|thumb|right|300px|Pakaine-Ded i Sneguročka]]
 '''Pakaine-Ded''' ([[Venäkel'|ven.]] ''Дед Мороз'') om sarnaline personaž, [[Uz' voz'|Uden voden]] lahjoičijan [[venälaižed|venälaine]] variant.
 
 Pakaine-Dedan kodima om [[Sur' Ustüg]]. Sündundpäiv — [[18. kül'mku]].
