Намудрил... Как бы теперь сделать, чтобы шаблон был всё время справа?

--- a/Ristitun_hibj.mw
+++ b/Ristitun_hibj.mw
@@ -1,4 +1,6 @@
-'''Ristitun hibj''' om [[ristit]]un fizine struktur, ristitun [[organizm]].
+'''Ristitun hibj''' om [[ristit]]un fizine struktur, ristitun [[organizm]]. Ristitun hibj kogoneb erazvuiččiden tipoiden [[stai (biologii)|stajišpäi]], kudambad organizuiše [[kudeh|kudehiže]], a kudehed formiruidas [[ristitun elimed|elimid]], täuttas avarut ümbri niiš vai kattas polel. Aigvoččen ristitun hibjad tehtas läz koumedkümned trillionad stajad. Stajad oma ümbärdud stajidenkeskeižel substancijal, kudamb varatoitab niiden mehaništ tüged i todenzoitab himižiden substancijoiden sirdandad.
+
+Ristitun hibjas erištadas [[pä]]d, [[kagl]]ad, [[hibjrung]]od, [[käzi|ülä-]] da [[jaug|alalopusid]].
 
 {{Ristitun hibj}}
 
