--- a/Anadir'.mw
+++ b/Anadir'.mw
@@ -1,4 +1,7 @@
 '''Anadir'''' ([[Venäkel'|ven]].: ''Анадырь'', [[Čukčan kel'|čukč]].: ''Кагыргын'') om lidn [[Venäma|Venämas]]. Se om [[Čukčan avtonomine ümbrik|Čukčan avtonomižen ümbrikon]] keskuz.
+
+[[Fail:Anadyr bus.jpg|thumb|left|300px|Ird Anadiras]]
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
