*Empty MediaWiki Message*

--- a/Runaway_Train.mw
+++ b/Runaway_Train.mw
@@ -6,3 +6,7 @@ Pajon tekst om [[anglijan kel'|anglijan kelel]].
 [[Kategorii:Pajod kirjamišton mödhe]]
 
 [[en:Runaway Train (Soul Asylum song)]]
+[[eu:Runaway Train (Soul Asylum)]]
+[[fr:Runaway Train (chanson)]]
+[[it:Runaway Train (Soul Asylum)]]
+[[sv:Runaway Train (sång)]]
