Их 14 миллионов)) И надо бы определиться с названием...

--- a/Kazahlaižed.mw
+++ b/Kazahlaižed.mw
@@ -1,5 +1,5 @@
 [[Fail:SB - Inside a Kazakh yurt.jpg|300px|pisi|Kazahad]]
-'''Kazahad''' vai '''kazahaläižed''' ([[Kazahan kel'|kazahan kelel]]: ''қазақтар, qazaqtar'' vai قازاقتار) — vähäluguine turk rahvaz. Kazahläižed eläba [[Kazahstan]]as.
+'''Kazahad''' vai '''kazahaläižed''' ([[Kazahan kel'|kazahan kelel]]: ''қазақтар, qazaqtar'' vai قازاقتار) — türkine rahvaz. Kazahläižed eläba [[Kazahstan]]as.
 
 {{stub}}
 
