--- a/Evrovizii-2012.mw
+++ b/Evrovizii-2012.mw
@@ -159,7 +159,7 @@ Konkursan vägestai oli [[Ročinma|ročine]] pajatai '''[[Lorin]]'''.
 | 16
 | {{GRC}}
 | [[Anglijan kel'|Anglijan]]
-| Elefterija Elefteriu
+| [[Elefteriu Elefterija|Elefterija Elefteriu]]
 | «Aphrodisiac»
 | «Afrodiziak»
 |64
