*Empty MediaWiki Message*

--- a/Samai_Soluna.mw
+++ b/Samai_Soluna.mw
@@ -1,3 +1,4 @@
+[[Fail:7399Soluna Samay.JPG|thumb|right|250px|Soluna Samai]]
 '''Soluna Samai Kettel'-Zigler''' ([[danijan kel'|dan.]] ''Soluna Samay Kettel-Ziegler''; sünd. [[27. eloku]] [[1990]], [[Gvatemal (lidn)|Gvatemal-lidn]], [[Gvatemal]]) om [[Danii|danijalaine]] pajatai.
 
 Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Should've Known Better]]"-pajon. Soluna sai 23-nden sijan (21 čokkoint).
