--- a/Elefteriu_Elefterija.mw
+++ b/Elefteriu_Elefterija.mw
@@ -1,7 +1,7 @@
 [[Fail:Eleftheria Eleftheriou4.jpg|thumb|right|250px|Elefterija Elefteriu]]
 '''Elefterija Elefteriu''' ([[grekan kel'|grek.]]: ''Ελευθερία Ελευθερίου''; sünd. [[12. keväz'ku]] [[1989]], [[Paralimni]], [[Kipr]]) om kiprilaine pajatai.
 
-Vl 2012 hän ezini «[[Evrovizii]]»-konkursal, kus pajati «[[Aphrodisiac]]»-pajon. Elefterija sai 17-nden sijan (64 čokkoint).
+Vl 2012 hän ezini «[[Evrovizii]]»-konkursal, kus pajati «[[Aphrodisiac]]»-pajon, kut [[Grekanma]]n ezitai. Elefterija sai 17-nden sijan (64 čokkoint).
 {{stub}}
 
 [[Kategorii:Evrovizii]]
