--- a/Lodz'.mw
+++ b/Lodz'.mw
@@ -1,3 +1,4 @@
+[[File:Pałac Izraela Poznańskiego Łódź front.JPG|thumb|]]
 '''Lodz'''' ([[Pol'šan kel'|pol'š]].: ''Łódź'') om lidn [[Pol'šanma]]s. Se om [[Lodzin saodaveikund]]an pälidn.
 {{stub}}
 
