*Empty MediaWiki Message*

--- a/Pirei.mw
+++ b/Pirei.mw
@@ -17,7 +17,7 @@
 
 Pind om 11 km². Lidnan eläjiden lugu om 175,697 ristitud (2001).
 
-Vrilissijan pämez' om Vasilis Mihaloliakos.
+Pirejan pämez' om Vasilis Mihaloliakos.
 {{stub}}
 
 [[Kategorii:Grekanman lidnad]]
